myteo/test/analyze/name_resolution/unresolved_name_error.exp
Error: Could not resolve name "x"
test/analyze/name_resolution/unresolved_name_error.myte:6:2
 6 |   x;
   |   ^

Error: Could not resolve name "y"
test/analyze/name_resolution/unresolved_name_error.myte:7:2
 7 |   y;
   |   ^

Error: Could not resolve name "x"
test/analyze/name_resolution/unresolved_name_error.myte:29:2
 29 |   x;
    |   ^

Error: Could not resolve name "y"
test/analyze/name_resolution/unresolved_name_error.myte:30:2
 30 |   y;
    |   ^

Error: Could not resolve name "x"
test/analyze/name_resolution/unresolved_name_error.myte:45:2
 45 |   x;
    |   ^

Error: Could not resolve name "y"
test/analyze/name_resolution/unresolved_name_error.myte:46:2
 46 |   y; 
    |   ^

Error: Could not resolve name "x"
test/analyze/name_resolution/unresolved_name_error.myte:57:2
 57 |   x;
    |   ^